Handle contracts